# plumbrowse

./: Cargo.toml  build.rs
assets/: .gitkeep
scripts/: pull.cmd  push.sh  run-as-app.cmd  run-as-app.ps1  run-as-app.sh  sync-windows.cmd  sync-windows.ps1
src/: main.rs
static/: ui.html
