[package]
name = "plumbrowser"
version = "1.0.2"
edition = "2021"
build = "build.rs"

[dependencies]
tao = "0.29"
wry = { version = "0.53.5", features = ["devtools"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.4"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.23"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
