[package]
name = "plumbrowser"
version = "1.1.2"
edition = "2021"
build = "build.rs"

[dependencies]
tao = "0.29"
wry = { version = "0.53.5", features = ["devtools"] }
serde_json = "1"
ureq = { version = "2.12", default-features = false, features = ["json"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.4"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.23"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
